<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".Activity.AccountActivity">

    <Button
        android:id="@+id/chageNick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chage_nick"
        style="@style/BrownButtonStyle"
        android:textSize="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/changeEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/changeEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        style="@style/BrownButtonStyle"
        android:textSize="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/chageNick"
        app:layout_constraintBottom_toTopOf="@+id/changePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/changePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        style="@style/BrownButtonStyle"
        android:textSize="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/changeEmail"
        app:layout_constraintBottom_toTopOf="@+id/clearData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clearData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_data"
        style="@style/BrownButtonStyle"
        android:textSize="20dp"
        android:paddingVertical="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/changePassword"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/deleteAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        style="@style/BrownButtonStyle"
        android:textSize="20dp"
        android:paddingVertical="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/clearData"
        app:layout_constraintBottom_toTopOf="@+id/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        style="@style/BrownButtonStyle"
        android:textSize="20dp"
        android:paddingVertical="12dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
