<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/mainLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/main_login_text"
        android:textColor="@color/LightBlue"
        android:textSize="48dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLoginText">

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/text_email"
            android:textColor="@color/LightBlue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/enterEmail"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="14dp"
            android:textColor="@color/BlackBrown"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/text_password"
            android:textColor="@color/LightBlue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="320dp"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="14dp"
            android:textColor="@color/BlackBrown"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="68dp"
        android:layout_marginBottom="235dp"
        android:background="@drawable/btn_round"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/Background"
        android:textSize="36dp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/backPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_back_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/registrationTransition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/registration_transition"
            android:textAlignment="viewEnd"
            android:textColor="@color/BlackBlue"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/registrationTransitionLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_extra_bold"
            android:text= "@string/registration_transition_link"
            android:textColor="@color/LightBlue"
            android:textSize="16dp"
            android:linksClickable="true"
            android:focusable="true"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>